# predict-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: audit.yml  cd.yml
src/: consts.rs  geodetic.rs  julian_date.rs  lib.rs  math.rs  observer.rs  orbit.rs  predict.rs  sun.rs
