[package]
name = "predict-rs"
description = "A rust port of the libpredict satellite orbit prediction library"
edition = "2021"
homepage = "https://github.com/eodms-sgdot/predict-rs/"
keywords = ["SATELLITE", "PASSES", "CONTACTS"]
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/eodms-sgdot/predict-rs/"
resolver = "2"
rust-version = "1.81"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
libm = "0.2"
sgp4 = "2.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
unwrap_used = { level = "warn" }
exhaustive_enums = "warn"
std_instead_of_core = "warn"
absolute_paths = "warn"
let_underscore_untyped = "warn"
